# ori-vst

./: Cargo.toml  default.nix  export_gain.sh
examples/: gain.rs
macro/: Cargo.toml
macro/src/: lib.rs  params.rs
src/: audio_layout.rs  buffer.rs  component.rs  controller.rs  editor.rs  factory.rs  float.rs  lib.rs  param.rs  plugin.rs  processor.rs  state.rs  unit.rs  util.rs  view.rs  x11.rs
