[package]
name = "ori-vst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macro"]

[features]
image = ["ori/image"]
serde = ["ori/serde"]

[dependencies]
ori-vst-macro = { path = "macro", version = "0.1.0" }

bitflags = "2.0"
serde_bencode = "0.2"
parking_lot = "0.12"
uuid = "1"
vst3-com = { git = "https://github.com/RustAudio/vst3-sys.git", rev = "f3e8f01" }
vst3-sys = { git = "https://github.com/RustAudio/vst3-sys.git", rev = "f3e8f01" }

[dependencies.ori]
git = "https://github.com/ori-ui/ori.git"
default-features = false

[dependencies.ori-skia]
git = "https://github.com/ori-ui/ori.git"

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21.0"
xkeysym = "0.2"

[[example]]
name = "gain"
crate-type = ["cdylib"]
